--- a/conf/machine/imx6q-icb.conf
+++ b/conf/machine/imx6q-icb.conf
@@ -5,15 +5,23 @@
 #@MAINTAINER: Hyuksoo KIM <kimhs@naimtechnology.com>
 #
 # This machine replaces the following machines:
-#    * imx6qdl-icb
+#    * imx6q-icb
 # and is able to work for all the machines.
 
-MACHINEOVERRIDES =. "mx6:mx6q:mx6dl:"
+MACHINEOVERRIDES =. "mx6:mx6q:mx6dl:use-mainline-bsp:"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 
-KERNEL_DEVICETREE = "imx6q-sabresd.dtb"
+ICB_DEFAULT_UBOOT = "u-boot-icb"
+ICB_DEFAULT_KERNEL = "linux-icb"
+ICB_DEFAULT_KERNEL_use-mainline-bsp = "linux-icb"
+
+PREFERRED_PROVIDER_virtual/bootloader ="${ICB_DEFAULT_UBOOT}"
+PREFERRED_PROVIDER_u-boot ?= "${ICB_DEFAULT_UBOOT}"
+PREFERRED_PROVIDER_virtual/kernel ?= "${ICB_DEFAULT_KERNEL}"
+
+KERNEL_DEVICETREE = "imx6q-icb.dtb"
 
 KERNEL_DEVICETREE_use-mainline-bsp = "imx6q-icb.dtb"
 
