--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,3 +11,5 @@ BBFILE_PRIORITY_meta-icb = "6"
 
 LAYERDEPENDS_meta-icb = "core"
 LAYERSERIES_COMPAT_meta-icb = "warrior"
+
+FSL_EULA_FILE = "${LAYERDIR}/EULA"
