all updates for ICB default setting

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,6 +10,6 @@ BBFILE_PATTERN_meta-icb = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-icb = "6"
 
 LAYERDEPENDS_meta-icb = "core"
-LAYERSERIES_COMPAT_meta-icb = "warrior zeus"
+LAYERSERIES_COMPAT_meta-icb = "zeus"
 
 FSL_EULA_FILE = "${LAYERDIR}/EULA"
