--- a/conf/machine/imx6q-icb.conf
+++ b/conf/machine/imx6q-icb.conf
@@ -8,7 +8,7 @@
 #    * imx6q-icb
 # and is able to work for all the machines.
 
-MACHINEOVERRIDES =. "mx6:mx6q:mx6dl:use-mainline-bsp:"
+MACHINEOVERRIDES =. "mx6:mx6q:mx6dl:"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
@@ -21,9 +21,9 @@ PREFERRED_PROVIDER_virtual/bootloader ="${ICB_DEFAULT_UBOOT}"
 PREFERRED_PROVIDER_u-boot ?= "${ICB_DEFAULT_UBOOT}"
 PREFERRED_PROVIDER_virtual/kernel ?= "${ICB_DEFAULT_KERNEL}"
 
-KERNEL_DEVICETREE = "imx6q-icb.dtb"
+KERNEL_DEVICETREE = "imx6q-icb.dtb imx6q-icb-ldo.dtb"
 
-KERNEL_DEVICETREE_use-mainline-bsp = "imx6q-icb.dtb"
+KERNEL_DEVICETREE_use-mainline-bsp = "imx6q-icb.dtb imx6q-icb-ldo.dtb"
 
 UBOOT_MACHINE ?= "mx6icb_defconfig"
 
