--- a/recipes-desktop/video-input-icon/files/IR-Camera-Test.desktop
+++ b/recipes-desktop/video-input-icon/files/IR-Camera-Test.desktop
@@ -2,9 +2,10 @@
 Name=IR Camera Video Test
 Comment=Launches gst-launch to show ircamera input on screen.
 Exec=/usr/bin/ircamera-test
-Icon=video-player 
+Icon=multimedia-player
 Terminal=true
 Type=Application  
 StartupNotify=true
-Categories=GTK;AudioVideo;Audio;Player;
+Categories=GTK;AudioVideo;Video;Player;
 Name[en_US]=IR-Camera-Test
+
